@@ -3,7 +3,6 @@ package uk.gov.hmcts.reform.professionalapi.controller.response;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.Getter;
 import lombok.Setter;
@@ -19,7 +18,7 @@ public class MultipleUserProfilesResponse {
     public MultipleUserProfilesResponse(List<UserProfile> userProfiles, Boolean isRequiredRoles) {
 
         this.userProfiles = userProfiles.stream().map(userProfile ->
-                new GetUserProfileResponse(userProfile, isRequiredRoles)).collect(Collectors.toList());
+                new GetUserProfileResponse(userProfile, isRequiredRoles)).toList();
 
     }
 }
